--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -56,3 +56,10 @@ ja:
       cancel: "キャンセル"
       upload: "アップロード"
       delete: "削除"
+  views:
+    pagination:
+      first: "&laquo; 先頭"
+      last: "末尾 &raquo;"
+      previous: "&lsaquo; 前"
+      next: "次 &rsaquo;"
+      truncate: "..."
