--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,6 +9,7 @@ ja:
         email: '連絡先メールアドレス'
         affiliation: '所属'
         body: 'お問い合わせ内容'
+        accept: '個人情報利用について'
       event_entry:
         name_kanji: '名前（漢字）'
         name_kana: '名前（ひらがな）'
